# ipython-ctrlr-fzf

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: build_and_publish.yml
ipython_ctrlr_fzf/: __init__.py  __main__.py
