[tool.poetry]
name = "ipython-ctrl-r-fzf"
version = "0.1.0"
description = "overrides ipython's backwards search to use fzf"
authors = ["Mike Bianco <mike@mikebian.co>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyfzf = "^0.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
