[tool.poetry]
name = "ipython-ctrlr-fzf"
version = "0.2.0"
description = "overrides ipython's backwards search to use fzf"
authors = ["Mike Bianco <mike@mikebian.co>"]
license = "MIT"
readme = "README.md"
keywords = ["ipython", "fzf", "ipython-extension"]
homepage = "https://github.com/iloveitaly/ipython-ctrlr-fzf"

[tool.poetry.dependencies]
python = "^3.10"
pyfzf = "^0.3.1"
prompt-toolkit = "^3.0.41"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
